--- a/automatic_subtitles.ipynb
+++ b/automatic_subtitles.ipynb
@@ -9,7 +9,7 @@
         "U8Jqe4Iz1NqV"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPxo4zqjLQNUN5ELpU56fCZ",
+      "authorship_tag": "ABX9TyN/+GnobETPAfs78bfQTc7a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,7 @@
         "\n",
         "#!pip install moviepy # посмотрим, может. можно убрать\n",
         "!pip install -U openai-whisper # установка whisper\n",
+        "!pip install pydub\n",
         "\n",
         "from moviepy.editor import VideoFileClip\n",
         "from IPython.display import clear_output # для очистки выходных данных\n",
@@ -260,7 +261,7 @@
         "  # Запоминаем путь к файлу\n",
         "  for file in os.listdir('/content'):\n",
         "    if file.startswith('vid'):\n",
-        "        path_to_video = os.path.join(directory, file)\n",
+        "        path_to_video = os.path.join('/content', file)\n",
         "else:\n",
         "  if not gd_mounted:\n",
         "    from google.colab import drive\n",
@@ -399,7 +400,7 @@
         "download_file = False # @param {type: \"boolean\"}\n",
         "\n",
         "if os.path.isfile('/content/aud.wav'):\n",
-        "  result = model.transcribe('/content/sample_data/aud.wav', initial_prompt = prompt, word_timestamps = word_timestamps)\n",
+        "  result = model.transcribe('/content/aud.wav', initial_prompt = prompt, word_timestamps = word_timestamps)\n",
         "  lang = result['language']\n",
         "\n",
         "  write_result_to_file(result, '/content/result.srt')\n",
