--- a/automatic_subtitles.ipynb
+++ b/automatic_subtitles.ipynb
@@ -9,7 +9,7 @@
         "U8Jqe4Iz1NqV"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN/+GnobETPAfs78bfQTc7a",
+      "authorship_tag": "ABX9TyMiV8HoJOmtlDCl8kBPgrVV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -412,7 +412,7 @@
         "      word_lines = [''] + wf.read().split('\\n')\n",
         "\n",
         "  if lang == 'ru' or lang == 'en':\n",
-        "    ok = check_punctuation_percent('/content/result.txt', lang, True)\n",
+        "    ok = check_punctuation_percent('/content/result.srt', lang, True)\n",
         "    assert ok, f\" [!] Вероятно, модель пропустила знаки пунктуации. Рекомендуется перезапустить процесс распознавания.\"\n",
         "  print('Файл сохранён по пути /content/result.srt')\n",
         "  if download_file:\n",
@@ -463,8 +463,8 @@
         "  space2 = s2.find(' ')\n",
         "  word1 = s1[space1 + 1:] if space1 != -1 else s1\n",
         "  word2 = s2[:space2] if space2 != -1 else s2\n",
-        "  print(word1)\n",
-        "  print(word2)\n",
+        "  #print(word1)\n",
+        "  #print(word2)\n",
         "\n",
         "  new_end = 0\n",
         "  new_start = 0\n",
@@ -521,7 +521,6 @@
         "def process_text(file_path, max_sent_dur, word_times, word_lines):\n",
         "    with open(file_path, 'r') as txtfile:\n",
         "        lines = [''] + txtfile.read().split('\\n')\n",
-        "        print(lines)\n",
         "\n",
         "    new_lines = []\n",
         "    current_sentence = \"\"\n",
@@ -593,7 +592,7 @@
         "\n",
         "path_to_words = '/content/words.txt'\n",
         "word_lines = []\n",
-        "if word_times:\n",
+        "if word_timestamps:\n",
         "  with open(path_to_words, 'r') as wf:\n",
         "    word_lines = [''] + wf.read().split('\\n')\n",
         "\n",
