--- a/video_dubbing.ipynb
+++ b/video_dubbing.ipynb
@@ -5,11 +5,10 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "mfkRU81vby8Z",
         "6Tz7lmci99Rd",
         "o3fSu0qeDQur"
       ],
-      "authorship_tag": "ABX9TyNwUqKl3YQ0+Zxqp9NcAdPZ",
+      "authorship_tag": "ABX9TyN26QXFTDZIR10c0bq+xlLD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,10 +207,10 @@
         "  pos = time.find(':')\n",
         "  if pos != -1:\n",
         "    buf = time[: pos]\n",
-        "    if not (len(buf) > 0 and len(buf) < 3 and buf.isdigit() and int(buf) > 0):\n",
+        "    if not (len(buf) > 0 and len(buf) < 3 and buf.isdigit() and int(buf) >= 0):\n",
         "      ok = False\n",
         "    buf = time[pos + 1 :]\n",
-        "    if not (len(buf) > 0 and len(buf) < 3 and buf.isdigit() and int(buf) > 0):\n",
+        "    if not (len(buf) > 0 and len(buf) < 3 and buf.isdigit() and int(buf) >= 0):\n",
         "      ok = False\n",
         "    if ok:\n",
         "      buf = int(time[: pos]) * 60 + int(time[pos + 1 :])\n",
@@ -475,7 +474,7 @@
         "  # Запоминаем путь к файлу\n",
         "  for file in os.listdir('/content'):\n",
         "    if file.startswith('vid'):\n",
-        "        path_to_video = os.path.join(directory, file)\n",
+        "        path_to_video = os.path.join('/content', file)\n",
         "else:\n",
         "  if not gd_mounted:\n",
         "    from google.colab import drive\n",
@@ -570,12 +569,12 @@
         "\n",
         "# обрезание любого аудиофайла\n",
         "if start_str != '0':\n",
-        "  ok_s, start = form_boundary(start_str) # формирование времени начала в секундах\n",
+        "  ok_s, start = form_boundary(start_str, clone_sample) # формирование времени начала в секундах\n",
         "else:\n",
         "  start = 0\n",
         "  ok_s = True\n",
         "if end_str != '0':\n",
-        "  ok_e, end = form_boundary(end_str) # формирование времени окончания в секундах\n",
+        "  ok_e, end = form_boundary(end_str, clone_sample) # формирование времени окончания в секундах\n",
         "else:\n",
         "  end = 0\n",
         "  ok_e = True\n",
@@ -1259,8 +1258,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 75
         },
-        "outputId": "85122ead-46a9-4c41-dd91-08485c61df87",
-        "cellView": "form"
+        "outputId": "85122ead-46a9-4c41-dd91-08485c61df87"
       },
       "execution_count": null,
       "outputs": [
