--- a/automatic_subtitles.ipynb
+++ b/automatic_subtitles.ipynb
@@ -6,6 +6,7 @@
       "provenance": [],
       "collapsed_sections": [
         "QZQsPqHvTlJY",
+        "O0NPwPS-edjC",
         "U8Jqe4Iz1NqV"
       ],
       "gpuType": "T4",
@@ -612,8 +613,8 @@
         "  files.download('/content/subtitles.srt')"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "iedlpqdnkocO"
+        "id": "iedlpqdnkocO",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
