--- a/video_dubbing.ipynb
+++ b/video_dubbing.ipynb
@@ -5,7 +5,11 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "mfkRU81vby8Z",
+        "PjVGysqseJnA",
+        "N9MhhhPXFFgp",
         "6Tz7lmci99Rd",
+        "aFSyY92r7FHD",
         "o3fSu0qeDQur"
       ],
       "authorship_tag": "ABX9TyN26QXFTDZIR10c0bq+xlLD",
