--- a/video_dubbing.ipynb
+++ b/video_dubbing.ipynb
@@ -12,7 +12,7 @@
         "aFSyY92r7FHD",
         "o3fSu0qeDQur"
       ],
-      "authorship_tag": "ABX9TyN26QXFTDZIR10c0bq+xlLD",
+      "authorship_tag": "ABX9TyO63giN91TgDNVaN4ERj43X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "_w4OxjRHaeDt"
       },
@@ -420,6 +420,9 @@
         "\n",
         "# Проверка на то, что файл имеет необходимую структуру\n",
         "if check_txtfile(path_to_text):\n",
+        "  txtfile = open(path_to_text, 'r', encoding = 'utf-8')\n",
+        "  lines = [''] + txtfile.read().split('\\n')\n",
+        "  txtfile.close()\n",
         "  clear_output()\n",
         "else:\n",
         "  print('Неверная структура выбранного файла!')"
@@ -540,6 +543,8 @@
         "  for filename in uploaded.keys():\n",
         "    # переименование загруженного файла\n",
         "    if filename.endswith('.wav'):\n",
+        "      print('/content/' + filename)\n",
+        "      print(clone_sample)\n",
         "      if '/content/' + filename != clone_sample:\n",
         "        os.rename(filename, clone_sample)\n",
         "    elif filename.endswith('.mp3'):\n",
@@ -588,9 +593,9 @@
         "  old_audio = AudioSegment.from_file(clone_sample)\n",
         "  if start != 0 and end != 0:\n",
         "    extract = old_audio[start * 1000:end * 1000]\n",
-        "  elif start == 0:\n",
+        "  elif start == 0 and end != 0:\n",
         "    extract = old_audio[:end * 1000]\n",
-        "  elif end == 0:\n",
+        "  elif end == 0 and start != 0:\n",
         "    extract = old_audio[start * 1000:]\n",
         "  else:\n",
         "    extract = old_audio\n",
