--- a/automatic_subtitles.ipynb
+++ b/automatic_subtitles.ipynb
@@ -6,11 +6,10 @@
       "provenance": [],
       "collapsed_sections": [
         "QZQsPqHvTlJY",
-        "O0NPwPS-edjC",
         "U8Jqe4Iz1NqV"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMiV8HoJOmtlDCl8kBPgrVV",
+      "authorship_tag": "ABX9TyNKuxZRFElRPTIW7uv2Of0M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -633,6 +632,7 @@
         "import iso639\n",
         "import os\n",
         "from IPython.display import clear_output\n",
+        "from google.colab import files\n",
         "\n",
         "#@markdown Введите язык, на который желаете перевести текст из видео\n",
         "language = \"english\" #@param {type: \"string\"}\n",
