--- a/video_dubbing.ipynb
+++ b/video_dubbing.ipynb
@@ -8,11 +8,10 @@
         "mfkRU81vby8Z",
         "PjVGysqseJnA",
         "N9MhhhPXFFgp",
-        "6Tz7lmci99Rd",
         "aFSyY92r7FHD",
         "o3fSu0qeDQur"
       ],
-      "authorship_tag": "ABX9TyO63giN91TgDNVaN4ERj43X",
+      "authorship_tag": "ABX9TyOh0YvcI+xXO7jzZ1W6uM20",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,13 +71,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "_w4OxjRHaeDt"
       },
       "outputs": [],
       "source": [
-        "#!pip install moviepy\n",
         "!pip install pydub\n",
         "!pip install ffmpeg-python\n",
         "!pip install iso639\n",
@@ -139,7 +137,7 @@
         "def check_duration(old_path, aud_path, start, end, slow_aud, limit):\n",
         "  duration = (end - start) * 1000 # в миллисекундах\n",
         "  # измеряем продолжительность синтезированного фрагмента\n",
-        "  audio = AudioSegment.from_file(path)\n",
+        "  audio = AudioSegment.from_file(old_path)\n",
         "  if len(audio) != duration: # если аудио получилось больше или меньше требуемой продолжительности\n",
         "    # нужно его ускорить и замедлить или добавить паузу (в зависимости от режима)\n",
         "    coef = len(audio) / duration # коэффициент растяжения или сжатия\n",
@@ -266,7 +264,7 @@
         "      voice = 'manipuri_female'\n",
         "  # кириллические языки\n",
         "  else:\n",
-        "    model_id = 'v4_cyrillic'\n",
+        "    model_id = 'cyrillic'\n",
         "\n",
         "  return model_id, voice, ver\n",
         "\n",
@@ -420,6 +418,7 @@
         "\n",
         "# Проверка на то, что файл имеет необходимую структуру\n",
         "if check_txtfile(path_to_text):\n",
+        "  # считываем из файла строки\n",
         "  txtfile = open(path_to_text, 'r', encoding = 'utf-8')\n",
         "  lines = [''] + txtfile.read().split('\\n')\n",
         "  txtfile.close()\n",
@@ -451,6 +450,7 @@
         "\n",
         "#@markdown ``Вставьте ссылку на видеоролик с платформы YouTube в требуемом формате `` 👇\n",
         "youtube_url = 'https://www.youtube.com/watch?v=YOUTUBE_ID' #@param {type:\"string\"}\n",
+        "#@markdown <font color=\"lightgray\"> ``(формат для Rutube: https://rutube.ru/video/VIDEO_ID/)``\n",
         "\n",
         "#@markdown ``Введите полный путь к видео на вашем Google Диске (для варианта с загрузкой с Google Drive) `` 👇\n",
         "path_google_drive = '/content/drive/MyDrive/path_to_vid' #@param {type:\"string\"}\n",
@@ -543,8 +543,6 @@
         "  for filename in uploaded.keys():\n",
         "    # переименование загруженного файла\n",
         "    if filename.endswith('.wav'):\n",
-        "      print('/content/' + filename)\n",
-        "      print(clone_sample)\n",
         "      if '/content/' + filename != clone_sample:\n",
         "        os.rename(filename, clone_sample)\n",
         "    elif filename.endswith('.mp3'):\n",
@@ -593,9 +591,9 @@
         "  old_audio = AudioSegment.from_file(clone_sample)\n",
         "  if start != 0 and end != 0:\n",
         "    extract = old_audio[start * 1000:end * 1000]\n",
-        "  elif start == 0 and end != 0:\n",
+        "  elif start == 0:\n",
         "    extract = old_audio[:end * 1000]\n",
-        "  elif end == 0 and start != 0:\n",
+        "  elif end == 0:\n",
         "    extract = old_audio[start * 1000:]\n",
         "  else:\n",
         "    extract = old_audio\n",
@@ -608,8 +606,8 @@
         "  print(\"Вы неправильно ввели значения! Попробуйте ещё раз. Пример в примечании.\")"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "9Di1xxj5fJtL"
+        "id": "9Di1xxj5fJtL",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1242,7 +1240,7 @@
         "    voice = voice_name\n",
         "  model, example_text = torch.hub.load(repo_or_dir='snakers4/silero-models',\n",
         "                                       model='silero_tts',\n",
-        "                                       language=lang_code,\n",
+        "                                       language=lang_code, # м. б. cyrillic, но такого кода нет (надо тестить)\n",
         "                                       speaker=model_id)\n",
         "  model.to(device)\n",
         "  if ver == '3-4':\n",
@@ -1267,7 +1265,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 75
         },
-        "outputId": "85122ead-46a9-4c41-dd91-08485c61df87"
+        "outputId": "85122ead-46a9-4c41-dd91-08485c61df87",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -1327,6 +1326,7 @@
         "        tts.voice_conversion_to_file(source_wav = path_to_init + '/' + fn,\n",
         "                                     target_wav = clone_sample,\n",
         "                                     file_path = path_to_cloned + '/' + fn)\n",
+        "      locale.getpreferredencoding = getpreferredencoding\n",
         "      !rm -rf $path_to_init\n",
         "      os.rename(path_to_cloned, path_to_init)\n",
         "    else:\n",
